...
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:inputType="text"
        android:text="@string/contraseña_usuario"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_descripcion_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre_usuario"
        tools:ignore="LabelFor,VisualLintTextFieldSize,TextSizeCheck" />

...
        android:autofillHints=""
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:text="@string/valoracion_usuario"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ibtn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_servicio_usuario"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

...
        android:layout_marginBottom="10dp"
        android:background="@drawable/fondo_boton_redondo"
        android:contentDescription="@string/boton_modperfil"
        android:onClick="atras"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibtn_edit"
        app:layout_constraintStart_toEndOf="@+id/btn_logout_user"
        app:layout_constraintTop_toBottomOf="@+id/edt_valoracion_usuario"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="@color/white"
        tools:ignore="ImageContrastCheck" />
...
