...
        android:layout_marginTop="55dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/fondo_boton_redondo"
        android:contentDescription="@string/boton_lupa"
        android:onClick="buscar_usuario"
        app:layout_constraintBottom_toTopOf="@+id/rv_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/edt_buscar_usuario"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@android:drawable/ic_menu_search"
...
