<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1">

    <TextView
        android:id="@+id/txt_titulo_reservas_chef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gestion_de_reservas_chef"
        android:textColor="@color/titulo"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_fecha_filtro"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/busca_fecha"
        android:inputType="number"
        android:textColorHint="@color/hint"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/rv_reservas_chef"
        app:layout_constraintEnd_toStartOf="@+id/btn_lupa3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_reservas_chef"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/btn_lupa3"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/fondo_boton_redondo"
        android:contentDescription="@string/boton_lupa"
        android:onClick="buscar_reserva"
        app:layout_constraintBottom_toTopOf="@+id/rv_reservas_chef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edt_fecha_filtro"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btn_logout_admin"
        tools:ignore="ImageContrastCheck"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:background="@drawable/fondo_boton_redondo_logout"
        android:contentDescription="@string/boton_modperfil"
        android:onClick="logout"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@android:drawable/ic_lock_power_off"
        app:tint="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reservas_chef"
        android:layout_width="408dp"
        android:layout_height="516dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_fecha_filtro" />
</androidx.constraintlayout.widget.ConstraintLayout>