...
        android:id="@+id/rating_valoracion_reserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="38dp"
        android:progressTint="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/comentario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecha_reserva" />

    <EditText
        android:id="@+id/comentario"
...
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/introduce_tu_comentario"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/ibtn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_valoracion_reserva" />

    <ImageButton
...
